--- a/ExpressionHelpers/ExpressionHelpers.csproj
+++ b/ExpressionHelpers/ExpressionHelpers.csproj
@@ -40,7 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddMaybeVisitor.cs" />
+    <Compile Include="MaybeEnumerableQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueriableExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
