--- a/Wcf.AttributeValidation/Wcf.AttributeValidation.Test/Wcf.AttributeValidation.Test.csproj
+++ b/Wcf.AttributeValidation/Wcf.AttributeValidation.Test/Wcf.AttributeValidation.Test.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -52,6 +53,12 @@
   <ItemGroup>
     <Compile Include="ObjectValidatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wcf.AttributeValidation\Wcf.AttributeValidation.csproj">
+      <Project>{5CE84004-959F-4664-BB9E-80EB293FD1BD}</Project>
+      <Name>Wcf.AttributeValidation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
