--- a/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
+++ b/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IValidator.cs" />
     <Compile Include="ObjectValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationAttributes\NotEmptyEnumerableAttribute.cs" />
     <Compile Include="ValidationBehavior.cs" />
     <Compile Include="ValidationError.cs" />
     <Compile Include="ValidationParameterInspector.cs" />
