добавляем nuspec файл

--- a/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
+++ b/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
@@ -54,6 +54,9 @@
     <Compile Include="ValidationError.cs" />
     <Compile Include="ValidationParameterInspector.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Wcf.AttributeValidation.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
