--- a/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
+++ b/Wcf.AttributeValidation/Wcf.AttributeValidation/Wcf.AttributeValidation.csproj
@@ -59,6 +59,9 @@
     <None Include="Content\web.config.install.xdt" />
     <None Include="Wcf.AttributeValidation.nuspec" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
